--- a/Images/Images/Base.lproj/Main.storyboard
+++ b/Images/Images/Base.lproj/Main.storyboard
@@ -16,20 +16,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ink-Ic-8wy">
+                            <searchBar contentMode="redraw" barStyle="black" text="Search for Album Art" translatesAutoresizingMaskIntoConstraints="NO" id="ink-Ic-8wy">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="G34-c0-NnX"/>
+                                    <constraint firstAttribute="width" constant="600" id="OiV-VJ-pqh"/>
+                                </constraints>
                                 <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="search"/>
                             </searchBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tol-71-Wvj">
-                                <rect key="frame" x="24" y="70" width="155" height="119"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tol-71-Wvj">
+                                <rect key="frame" x="24" y="70" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="4fj-rS-lPq"/>
+                                    <constraint firstAttribute="height" constant="100" id="ZJ6-lQ-EA4"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJt-8d-Oth">
+                                <rect key="frame" x="132" y="70" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZC-p8-NVc">
+                                <rect key="frame" x="132" y="99" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hR8-yT-w0y">
+                                <rect key="frame" x="132" y="128" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1A-fQ-smG">
+                                <rect key="frame" x="132" y="157" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.062745101749897003" green="0.047058828175067902" blue="0.015686275437474251" alpha="1" colorSpace="deviceRGB"/>
+                        <constraints>
+                            <constraint firstItem="tol-71-Wvj" firstAttribute="top" secondItem="ink-Ic-8wy" secondAttribute="bottom" constant="26" id="HMY-fO-bLy"/>
+                            <constraint firstItem="ink-Ic-8wy" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="Mcy-8l-eSx"/>
+                            <constraint firstAttribute="trailing" secondItem="ink-Ic-8wy" secondAttribute="trailing" id="btA-cm-vHT"/>
+                            <constraint firstItem="tol-71-Wvj" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="24" id="m2S-c0-p64"/>
+                            <constraint firstItem="ink-Ic-8wy" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="wke-YA-u5X"/>
+                        </constraints>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="albumImageVIew" destination="tol-71-Wvj" id="DDh-P5-oLQ"/>
+                        <outlet property="albumName" destination="gZC-p8-NVc" id="iht-ZB-dSt"/>
+                        <outlet property="artistName" destination="hJt-8d-Oth" id="f5T-5z-WZh"/>
+                        <outlet property="releaseDate" destination="q1A-fQ-smG" id="TMY-DT-ysc"/>
                         <outlet property="searchBar" destination="ink-Ic-8wy" id="OZW-ad-B9V"/>
                         <outlet property="searchDisplayController" destination="EA5-KR-Vid" id="zwo-eg-5Ow"/>
+                        <outlet property="trackCount" destination="hR8-yT-w0y" id="zCW-TO-xDw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
